# moon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  claude.md  docker-compose.yml  iam-policy.json  pyproject.toml
.claude/agents/: verifier.md
.claude/commands/: update-readme.md
.github/workflows/: deploy.yml
catalogs/: environment.yaml
catalogs/guidelines/: escalation_policy.md  intel_report.md  output_format.md
catalogs/runbooks/: malicious_ip_investigation.yaml  pr_security_review.yaml  security_alert_triage.yaml  threat_intel_digest.yaml
catalogs/skills/: code_reviewer.md  intel_editor.md  security_analyst.md  threat_intel_analyst.md
catalogs/tools/: fetch_latest_cves.yaml  fetch_security_news.yaml  fetch_threat_feeds.yaml  get_alert_details.yaml  get_environment_profile.yaml  get_ip_geo.yaml  get_passive_dns.yaml  get_pr_diff.yaml  query_threat_intel.yaml
src/moon/: agent.py  catalog.py  cli.py  config.py  coordinator.py  executor.py  llm.py  logging_config.py  models.py  server.py  store.py  tool_registry.py
src/moon/static/: index.html
tasks/examples/: batch.json  investigate_ip.json  review_pr.json  triage_crowdstrike.json
terraform/: .gitignore  bootstrap.sh  ci.tf  cloudflare.tf  ecs.tf  iam.tf  main.tf  networking.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
tests/: test_agent.py  test_bedrock.py  test_catalog.py  test_cli.py  test_coordinator.py  test_executor.py  test_models.py  test_store.py  test_tool_registry.py  test_tools_environment.py  test_tools_github.py  test_tools_threat_intel.py
(+3 files in other folders)
