[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moon"
version = "0.1.0"
description = "Multi-agent security orchestration system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
moon = "moon.cli:app"

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/moon"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
